--- a/src/web/components/Home/home.css
+++ b/src/web/components/Home/home.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   background-size: cover;
-  background-image: url('../../assets/images/bg.jpg') !important;
+  /* background-image: url('../../assets/images/bg.jpg') !important; */
 }
 .components-home {
   & h2 {
