--- a/src/web/components/Footer/index.css
+++ b/src/web/components/Footer/index.css
@@ -1,7 +1,6 @@
-a {
-    text-decoration: none;
-}
+
 .footerWrap {
+    margin-top:80px;
     text-align: center;
     background: #ffffff;
     color: #999999;
