--- a/src/web/components/RightComponet/index.css
+++ b/src/web/components/RightComponet/index.css
@@ -1,19 +1,12 @@
 html,body{
     background-image: none !important;
 }
-ul,li{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
 #secondary{
-    float: right;
     width: 245px;
-    margin-right: 100px;
-    border-left: 1px solid #ddd;
     padding-left: 35px;
     word-wrap: break-word;
     display: block;
+    margin-left:20px;
     padding-top: 40px;
 }
 .widget{
