添加首页和文章页面

--- a/src/web/components/Article/Content/index.css
+++ b/src/web/components/Article/Content/index.css
@@ -4,6 +4,7 @@ h4,
 h5,
 h6 {
   margin: 30px 0 10px;
+  color: #0085a1;
 }
 
 p {
@@ -55,10 +56,10 @@ img {
   }
 }
 
-.content-grid {
+/* .content-grid {
   display: grid;
   grid-template-columns: auto 195px;
-}
+} */
 
 .terminal-header {
   height: 25px;
@@ -106,6 +107,12 @@ img {
 
 .reset-button:hover::after {
   content: '+';
+}
+
+@media (min-width: 1200px) {
+  .post-content {
+    width: 1000px;
+  }
 }
 
 @media print, screen and (max-width: 680px) {
