--- a/src/web/components/Headerblock/index.css
+++ b/src/web/components/Headerblock/index.css
@@ -1,33 +1,43 @@
-h1,h2,h3,h4,h5,h6,ul,li,span,p {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+li,
+span,
+p {
+  margin: 0;
+  padding: 0;
 }
-ul,li {
-    list-style: none;
+ul,
+li {
+  list-style: none;
 }
 
 .wrapper {
+  width: 100%;
+  height: 400px;
+  background: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  & .nav {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
-    height: 400px;
-    background: #333333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    & .nav {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-    }
-    & .content {
-        text-align: center;
-        color: #ffffff;
-    }
-    & h1 {
-        margin-bottom: 20px;
-        font-size: 80px;
-        font-weight: 900;
-    }
+  }
+  & .content {
+    text-align: center;
+    color: #ffffff;
+  }
+  & h1 {
+    margin-bottom: 20px;
+    font-size: 80px;
+    font-weight: 900;
+    color: #ffffff;
+  }
 }
-
