--- a/src/web/components/Headerblock/index.css
+++ b/src/web/components/Headerblock/index.css
@@ -35,6 +35,7 @@ li {
     color: #ffffff;
   }
   & h1 {
+    padding: 0 20px;
     margin-bottom: 20px;
     font-size: 80px;
     font-weight: 900;
