--- a/src/web/components/Article/Catalog/index.css
+++ b/src/web/components/Article/Catalog/index.css
@@ -3,6 +3,8 @@
   color: #bfbfbf;
   font-size: 14px;
   width: 195px;
+  margin-top: 20px;
+  margin-left: 20px;
 
   & h5 {
     text-decoration: none;
@@ -79,5 +81,17 @@ hr {
 
   & a {
     color: #0085a1;
+  }
+}
+
+.sidebar-fixed {
+  position: fixed;
+  top: 20px;
+  margin-top: 0px;
+}
+
+@media (max-width: 1200px) {
+  .sidebar-container {
+    display: none;
   }
 }
