--- a/src/web/pages/Categories/index.css
+++ b/src/web/pages/Categories/index.css
@@ -1,10 +1,10 @@
 .home-container{
-    display:flex;
-    justify-content: center;
+    /* display:flex;
+    justify-content: center; */
     & .list-container {
-        width: 750px;
+        /* width: 750px; */
         & #main {
-            paddding-top: 40px;
+            padding-top: 40px;
             & h1 {
                 font-size: 2em;
                 margin: 0.67em 0;
